remove single page support

--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --single"
+    "start": "sirv public"
   }
 }
