bind to all ipv4 interfaces

--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public --host 0.0.0.0 --single"
   }
 }
