--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.2.3",
+    "rollup-plugin-svelte": "^6.1.1",
     "rollup-plugin-terser": "^5.3.1",
     "svelte": "^3.49.0"
   },
@@ -16,6 +16,6 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --host 0.0.0.0 --single"
+    "start": "sirv public --host 0.0.0.0 --single --etag"
   }
 }
